--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
          >
       </form>
       <div class="result">
-         <p id="result" class="text">
-            (![]+[])[-~-~-~+[]]+({}+[])[-~+[]]+({}+[])[(+!+[]<<-~-~-~+[])-+!+[]]+(![]+[])[-~-~-~+[]]+(![]+[])[-~+[]]+([][[]]+[])[-~+[]<<-~-~-~+[]]
-         </p>
-         <button class="copy">Copy!</button>
+         <p id="result" class="text"></p>
+         <button id="copy" class="copy">Copy!</button>
       </div>
       <script src="./script.js"></script>
    </body>
