--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <input type="text" id="prompt" class="input" autofocus spellcheck="false" placeholder="Enter prompt" />
       <div class="sub">
          <small>Allowed symbols:
-            <span class="darker">␣-0123456789ABEFINORSabcdefgijlmnoprstuvxy{}()[]</span>
+            <span class="symbols darker">␣-0123456789ABEFINORSabcdefgijlmnoprstuvxy{}()[]</span>
          </small>
          <small class="checkbox"><input type="checkbox" id="allow_missing" />
             <label for="allow_missing" class="darker">Allow missing symbols</label></small>
@@ -26,6 +26,17 @@
       <button id="copy" class="copy">Copy!</button>
    </div>
    <script type="module" src="./js/script.js"></script>
+   <div class="author">
+      <div class="social">
+         <a class="author_name" href="https://t.me/aliph0th" target="_blank">My Telegram</a>
+         <img class="logo" src="https://cdn.simpleicons.org/telegram/ccc" />
+      </div>
+      <div class="social">
+         <img class="logo" src="https://cdn.simpleicons.org/github/ccc" />
+         <a class="author_name" href="https://github.com/Aliph0th" target="_blank">Aliph0th (<span
+               class="through">TheMrBlackLord</span>)</a>
+      </div>
+   </div>
 </body>
 
 </html>
