--- a/index.html
+++ b/index.html
@@ -10,20 +10,38 @@
 </head>
 
 <body>
-   <h1 class="title">Get <span class="title_animation">Madness</span></h1>
-   <form class="form" id="form">
-      <input type="text" id="prompt" class="input" autofocus spellcheck="false" placeholder="Enter prompt" />
-      <div class="sub">
-         <small>Allowed symbols:
-            <span class="symbols darker">␣-0123456789ABEFINORSabcdefgijlmnoprstuvxy{}()[]</span>
-         </small>
-         <small class="checkbox"><input type="checkbox" id="allow_missing" />
-            <label for="allow_missing" class="darker">Allow missing symbols</label></small>
+   <div class="tabs">
+      <button class="tab_btn" data-tab="encode">Encode</button>
+      <button class="tab_btn active" data-tab="decode">Decode</button>
+   </div>
+   <h1 class="title"
+      title="[]+((+[])[({}+[])[-~-~-~-~-~+[]]+({}+[])[+!+[]]+([][[]]+[])[+!+[]]+(![]+[])[-~-~-~+[]]+(!![]+[])[+[]]+(!![]+[])[+!+[]]+([][[]]+[])[+[]]+({}+[])[-~-~-~-~-~+[]]+(!![]+[])[+[]]+({}+[])[+!+[]]+(!![]+[])[+!+[]]]+[])[+!+[]+[+!![]]]+(![]+[])[-~+[]]+([][[]]+[])[+!+[]+[+[]]-(-~-~+[])]+([][[]]+[])[+!+[]]+(!![]+[])[-~-~+!+[]]+(![]+[])[-~-~-~+[]]+(![]+[])[-~-~-~+[]]">
+      Get <span class="rainbow">Madness</span></h1>
+   <div id="encode" class="tab" hidden>
+      <form id="encode_form">
+         <input type="text" id="encode_prompt" class="input" autofocus spellcheck="false" placeholder="Enter prompt" />
+         <div class="sub">
+            <small>Allowed symbols:
+               <span class="symbols darker">␣-0123456789ABEFINORSabcdefgijlmnoprstuvxy{}()[]</span>
+            </small>
+            <small class="checkbox"><input type="checkbox" id="allow_missing" />
+               <label for="allow_missing" class="darker">Allow missing symbols</label></small>
+         </div>
+      </form>
+      <div class="result">
+         <p id="encode_result" class="text"></p>
+         <button class="copy">Copy!</button>
       </div>
-   </form>
-   <div class="result">
-      <p id="result" class="text"></p>
-      <button id="copy" class="copy">Copy!</button>
+   </div>
+   <div id="decode" class="tab">
+      <form id="decode_form">
+         <textarea autofocus spellcheck="false" id="decode_prompt" class="input textarea"
+            placeholder="Enter only madness-code"></textarea>
+      </form>
+      <div class="result decode_result">
+         <p id="decode_result" class="text"></p>
+         <button class="copy">Copy!</button>
+      </div>
    </div>
    <script type="module" src="./js/script.js"></script>
    <div class="author">
