--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </form>
       <div class="result">
          <p id="encode_result" class="text"></p>
-         <button class="copy">Copy!</button>
+         <button class="copy">Copy</button>
       </div>
    </div>
    <div id="decode" class="tab" hidden>
@@ -40,19 +40,20 @@
       </form>
       <div class="result decode_result">
          <p id="decode_result" class="text"></p>
-         <button class="copy">Copy!</button>
+         <button class="copy">Copy</button>
       </div>
    </div>
    <script type="module" src="./js/script.js"></script>
-   <div class="author">
+   <div class="author tooltiped">
+      <span class="tooltip">Mailen Sie mir if you find a bug or a way to get more characters</span>
       <div class="social">
-         <a class="author_name" href="https://t.me/aliph0th" target="_blank">My Telegram</a>
+         <a class="author_name" href="https://t.me/aliph0th" target="_blank">My Telegram .</a>
          <img class="logo" src="https://cdn.simpleicons.org/telegram/ccc" />
       </div>
       <div class="social">
          <img class="logo" src="https://cdn.simpleicons.org/github/ccc" />
          <a class="author_name" href="https://github.com/Aliph0th" target="_blank">Aliph0th (<span
-               class="through">TheMrBlackLord</span>)</a>
+               class="through">MrBlackLord</span>)</a>
       </div>
    </div>
 </body>
